--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -17,7 +17,7 @@
 
 <style>
 </style>
-<title>default layout</title>
+<title>NMOMG-너만오면고</title>
 
 <!-- 컨텐츠페이지의 CSS 영역이 들어감 -->
 <th:block layout:fragment="css"></th:block>
