--- a/src/main/resources/templates/home_backup2.html
+++ b/src/main/resources/templates/home_backup2.html
@@ -16,7 +16,7 @@
 <!--font,icon,js-->
 
 <!--css-->
-	<link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet">
+	<link th:href="@{/css/style_backup.css}" href="/css/style_backup.css" rel="stylesheet">
 	<link th:href="@{/css/Boardcss.css}" type="text/css" rel="stylesheet"/>
 <!--css-->
 
