--- a/src/main/resources/templates/layouts/default_layout.html
+++ b/src/main/resources/templates/layouts/default_layout.html
@@ -33,7 +33,9 @@
 
 
 </body>
-<th:block layout:fragment="script">
+<th:block th:replace="~{fragments/script :: scriptFragment}"></th:block>
+
+<th:block layout:fragment="scriptFragment">
 
 </th:block>
 </html>
