--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -73,7 +73,7 @@ value="apply"일 경우 > 가능스택
 
 
 				<div class="writer">
-					작성자:<input type="text" name="memberNum" value="3" readonly>
+					작성자:<input type="text" name="memberNum" th:value="${session.memberNum}" readonly>
 					<div>
 						제목:<input type="text" name="title">
 					</div>
