--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,7 +16,7 @@
       <input type="hidden" class="login-sessionCheck" th:value="${session.memberNum}">
       <div class="login-sessionCheck-exist">
         <span th:value="|${loginId}+님|"></span> <a href="">내 정보</a> <a href="#">내 팀</a> <a href="#">내 게시글</a> <a
-          href="#">내 댓글</a> <a href="#">쪽지함</a> <a href="#">로그아웃</a>
+          href="#">내 댓글</a> <a href="#">쪽지함</a> <a href="/member/logout">로그아웃</a>
 
       </div>
 
